assets/css/footer.scss
footer {
  @apply flex fixed bottom-0 z-10 w-full bg-white-100;
  justify-content: space-between;
  align-items: center;
  padding: 0.875rem 2.5rem;

  .block {
    @apply flex flex-col;
    align-items: flex-start;
    gap: 0.625rem;

    p {
      max-width: 20.375rem;
    }

    .block-tag {
      @apply bg-blue-100;
      padding: 0.25rem;
      justify-content: center;
      align-items: center;
      border-radius: 0.125rem;
    }

    .block-image {
      @apply flex flex-row;
      gap: 1rem;

      img {
        height: 2rem;
      }
    }
  }

  .divider {
    border: none;
    border-left: 1px solid #cce0f4;
    width: 1px;
    height: 2rem;
  }

  @media (max-width: 767px) {
    @apply flex flex-col absolute;
    gap: 1.5rem;
    padding: 2.5rem 1rem;

    .block {
      @apply flex;
      align-items: center;
      gap: 1rem;

      .block-image {
        @apply flex flex-col;
      }

      .block-text {
        text-align: center;
      }
    }

    .divider {
      border: none;
      border-top: 1px solid #cce0f4;
      width: 100%;
      height: 1px;
    }
  }
}

